Prepare-Stage2/4/parser/stage2.output
Nonterminals useless in grammar

    OptBar


Terminals unused in grammar

    NUM
    COMMENT
    LEXICALERROR
    `;`
    `{`
    `}`
    `%type`


Rules useless in grammar

   60 OptBar: `|`
   61      | ε


State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: Notation $end

    1 Notation: Prefix `%rules` INCLUDE S_1 S_2

    2 Prefix: ε
    3      | Prefix `%notation` ID
    4      | Prefix `%package` ID
    5      | Prefix `%path` ID
    6      | Prefix `%tables` ID
    7      | Prefix `%include` CODE
    8      | Prefix `%token` TypedTerminals
    9      | Prefix `%left` TypedTerminals
   10      | Prefix `%right` TypedTerminals
   11      | Prefix `%non` TypedTerminals
   12      | Prefix `%dialect` ID
   13      | Prefix `%scalalr` ID
   14      | Prefix `%signature` ID

   15 INCLUDE: `%include` CODE SEPARATOR
   16      | ε

   17 TypedTerminals: S_3

   18 TypedTerminal: ID `:` Type
   19      | ID `(` Type `)`
   20      | ID

   21 Rule: LHS `=` S_4 RHS

   22 LHS: ID `:` Type
   23      | ID

   24 RHS: S_5

   25 Production: NamedFields Action Precedence

   26 NamedFields: `%empty`
   27      | NamedField
   28      | NamedField NamedFields

   29 NamedField: FIELD
   30      | ID `:` FIELD

   31 FIELD: ID
   32      | `(` NamedFields `)` REPEAT

   33 REPEAT: `?`
   34      | `*`
   35      | `+`

   36 Action: ε
   37      | CODE

   38 Precedence: ε
   39      | `%prec` ID

   40 Type: ID
   41      | ID `[` Types `]`
   42      | `(` Types `)`
   43      | `(` `)`

   44 Types: Type
   45      | Type `,` Types

   46 S_1_L: Rule
   47      | S_1_L Rule

   48 S_1: S_1_L

   49 S_2: ε
   50      | SEPARATOR

   51 S_3_L: TypedTerminal
   52      | S_3_L TypedTerminal

   53 S_3: S_3_L
   54      | ε

   55 S_4: ε
   56      | `|`

   57 S_5_L: Production
   58      | S_5_L `|` Production

   59 S_5: S_5_L


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    `?` (258) 33
    `*` (259) 34
    `+` (260) 35
    ID (261) 3 4 5 6 12 13 14 18 19 20 22 23 30 31 39 40 41
    NUM (262)
    CODE (263) 7 15 37
    COMMENT (264)
    LEXICALERROR (265)
    `[` (266) 41
    `]` (267) 41
    `;` (268)
    `=` (269) 21
    `|` (270) 56 58
    `:` (271) 18 22 30
    `{` (272)
    `}` (273)
    `(` (274) 19 32 42 43
    `)` (275) 19 32 42 43
    `,` (276) 45
    SEPARATOR (277) 15 50
    `%path` (278) 5
    `%type` (279)
    `%empty` (280) 26
    `%notation` (281) 3
    `%package` (282) 4
    `%token` (283) 8
    `%left` (284) 9
    `%right` (285) 10
    `%non` (286) 11
    `%rules` (287) 1
    `%include` (288) 7 15
    `%prec` (289) 39
    `%tables` (290) 6
    `%dialect` (291) 12
    `%scalalr` (292) 13
    `%signature` (293) 14


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Notation (40)
        on left: 1
        on right: 0
    Prefix (41)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 1 3 4 5 6 7 8 9 10 11 12 13 14
    INCLUDE (42)
        on left: 15 16
        on right: 1
    TypedTerminals (43)
        on left: 17
        on right: 8 9 10 11
    TypedTerminal (44)
        on left: 18 19 20
        on right: 51 52
    Rule (45)
        on left: 21
        on right: 46 47
    LHS (46)
        on left: 22 23
        on right: 21
    RHS (47)
        on left: 24
        on right: 21
    Production (48)
        on left: 25
        on right: 57 58
    NamedFields (49)
        on left: 26 27 28
        on right: 25 28 32
    NamedField (50)
        on left: 29 30
        on right: 27 28
    FIELD (51)
        on left: 31 32
        on right: 29 30
    REPEAT (52)
        on left: 33 34 35
        on right: 32
    Action (53)
        on left: 36 37
        on right: 25
    Precedence (54)
        on left: 38 39
        on right: 25
    Type (55)
        on left: 40 41 42 43
        on right: 18 19 22 44 45
    Types (56)
        on left: 44 45
        on right: 41 42 45
    S_1_L (57)
        on left: 46 47
        on right: 47 48
    S_1 (58)
        on left: 48
        on right: 1
    S_2 (59)
        on left: 49 50
        on right: 1
    S_3_L (60)
        on left: 51 52
        on right: 52 53
    S_3 (61)
        on left: 53 54
        on right: 17
    S_4 (62)
        on left: 55 56
        on right: 21
    S_5_L (63)
        on left: 57 58
        on right: 58 59
    S_5 (64)
        on left: 59
        on right: 24


State 0

    0 $accept: • Notation $end

    $default  reduce using rule 2 (Prefix)

    Notation  go to state 1
    Prefix  go to state 2


State 1

    0 $accept: Notation • $end

    $end  shift, and go to state 3


State 2

    1 Notation: Prefix • `%rules` INCLUDE S_1 S_2
    3 Prefix: Prefix • `%notation` ID
    4      | Prefix • `%package` ID
    5      | Prefix • `%path` ID
    6      | Prefix • `%tables` ID
    7      | Prefix • `%include` CODE
    8      | Prefix • `%token` TypedTerminals
    9      | Prefix • `%left` TypedTerminals
   10      | Prefix • `%right` TypedTerminals
   11      | Prefix • `%non` TypedTerminals
   12      | Prefix • `%dialect` ID
   13      | Prefix • `%scalalr` ID
   14      | Prefix • `%signature` ID

    `%path`  shift, and go to state 4
    `%notation`  shift, and go to state 5
    `%package`  shift, and go to state 6
    `%token`  shift, and go to state 7
    `%left`  shift, and go to state 8
    `%right`  shift, and go to state 9
    `%non`  shift, and go to state 10
    `%rules`  shift, and go to state 11
    `%include`  shift, and go to state 12
    `%tables`  shift, and go to state 13
    `%dialect`  shift, and go to state 14
    `%scalalr`  shift, and go to state 15
    `%signature`  shift, and go to state 16


State 3

    0 $accept: Notation $end •

    $default  accept


State 4

    5 Prefix: Prefix `%path` • ID

    ID  shift, and go to state 17


State 5

    3 Prefix: Prefix `%notation` • ID

    ID  shift, and go to state 18


State 6

    4 Prefix: Prefix `%package` • ID

    ID  shift, and go to state 19


State 7

    8 Prefix: Prefix `%token` • TypedTerminals

    ID  shift, and go to state 20

    $default  reduce using rule 54 (S_3)

    TypedTerminals  go to state 21
    TypedTerminal  go to state 22
    S_3_L  go to state 23
    S_3  go to state 24


State 8

    9 Prefix: Prefix `%left` • TypedTerminals

    ID  shift, and go to state 20

    $default  reduce using rule 54 (S_3)

    TypedTerminals  go to state 25
    TypedTerminal  go to state 22
    S_3_L  go to state 23
    S_3  go to state 24


State 9

   10 Prefix: Prefix `%right` • TypedTerminals

    ID  shift, and go to state 20

    $default  reduce using rule 54 (S_3)

    TypedTerminals  go to state 26
    TypedTerminal  go to state 22
    S_3_L  go to state 23
    S_3  go to state 24


State 10

   11 Prefix: Prefix `%non` • TypedTerminals

    ID  shift, and go to state 20

    $default  reduce using rule 54 (S_3)

    TypedTerminals  go to state 27
    TypedTerminal  go to state 22
    S_3_L  go to state 23
    S_3  go to state 24


State 11

    1 Notation: Prefix `%rules` • INCLUDE S_1 S_2

    `%include`  shift, and go to state 28

    $default  reduce using rule 16 (INCLUDE)

    INCLUDE  go to state 29


State 12

    7 Prefix: Prefix `%include` • CODE

    CODE  shift, and go to state 30


State 13

    6 Prefix: Prefix `%tables` • ID

    ID  shift, and go to state 31


State 14

   12 Prefix: Prefix `%dialect` • ID

    ID  shift, and go to state 32


State 15

   13 Prefix: Prefix `%scalalr` • ID

    ID  shift, and go to state 33


State 16

   14 Prefix: Prefix `%signature` • ID

    ID  shift, and go to state 34


State 17

    5 Prefix: Prefix `%path` ID •

    $default  reduce using rule 5 (Prefix)


State 18

    3 Prefix: Prefix `%notation` ID •

    $default  reduce using rule 3 (Prefix)


State 19

    4 Prefix: Prefix `%package` ID •

    $default  reduce using rule 4 (Prefix)


State 20

   18 TypedTerminal: ID • `:` Type
   19      | ID • `(` Type `)`
   20      | ID •

    `:`  shift, and go to state 35
    `(`  shift, and go to state 36

    $default  reduce using rule 20 (TypedTerminal)


State 21

    8 Prefix: Prefix `%token` TypedTerminals •

    $default  reduce using rule 8 (Prefix)


State 22

   51 S_3_L: TypedTerminal •

    $default  reduce using rule 51 (S_3_L)


State 23

   52 S_3_L: S_3_L • TypedTerminal
   53 S_3: S_3_L •

    ID  shift, and go to state 20

    $default  reduce using rule 53 (S_3)

    TypedTerminal  go to state 37


State 24

   17 TypedTerminals: S_3 •

    $default  reduce using rule 17 (TypedTerminals)


State 25

    9 Prefix: Prefix `%left` TypedTerminals •

    $default  reduce using rule 9 (Prefix)


State 26

   10 Prefix: Prefix `%right` TypedTerminals •

    $default  reduce using rule 10 (Prefix)


State 27

   11 Prefix: Prefix `%non` TypedTerminals •

    $default  reduce using rule 11 (Prefix)


State 28

   15 INCLUDE: `%include` • CODE SEPARATOR

    CODE  shift, and go to state 38


State 29

    1 Notation: Prefix `%rules` INCLUDE • S_1 S_2

    ID  shift, and go to state 39

    Rule  go to state 40
    LHS  go to state 41
    S_1_L  go to state 42
    S_1  go to state 43


State 30

    7 Prefix: Prefix `%include` CODE •

    $default  reduce using rule 7 (Prefix)


State 31

    6 Prefix: Prefix `%tables` ID •

    $default  reduce using rule 6 (Prefix)


State 32

   12 Prefix: Prefix `%dialect` ID •

    $default  reduce using rule 12 (Prefix)


State 33

   13 Prefix: Prefix `%scalalr` ID •

    $default  reduce using rule 13 (Prefix)


State 34

   14 Prefix: Prefix `%signature` ID •

    $default  reduce using rule 14 (Prefix)


State 35

   18 TypedTerminal: ID `:` • Type

    ID  shift, and go to state 44
    `(`  shift, and go to state 45

    Type  go to state 46


State 36

   19 TypedTerminal: ID `(` • Type `)`

    ID  shift, and go to state 44
    `(`  shift, and go to state 45

    Type  go to state 47


State 37

   52 S_3_L: S_3_L TypedTerminal •

    $default  reduce using rule 52 (S_3_L)


State 38

   15 INCLUDE: `%include` CODE • SEPARATOR

    SEPARATOR  shift, and go to state 48


State 39

   22 LHS: ID • `:` Type
   23      | ID •

    `:`  shift, and go to state 49

    $default  reduce using rule 23 (LHS)


State 40

   46 S_1_L: Rule •

    $default  reduce using rule 46 (S_1_L)


State 41

   21 Rule: LHS • `=` S_4 RHS

    `=`  shift, and go to state 50


State 42

   47 S_1_L: S_1_L • Rule
   48 S_1: S_1_L •

    ID  shift, and go to state 39

    $default  reduce using rule 48 (S_1)

    Rule  go to state 51
    LHS  go to state 41


State 43

    1 Notation: Prefix `%rules` INCLUDE S_1 • S_2

    SEPARATOR  shift, and go to state 52

    $default  reduce using rule 49 (S_2)

    S_2  go to state 53


State 44

   40 Type: ID •
   41      | ID • `[` Types `]`

    `[`  shift, and go to state 54

    $default  reduce using rule 40 (Type)


State 45

   42 Type: `(` • Types `)`
   43      | `(` • `)`

    ID  shift, and go to state 44
    `(`  shift, and go to state 45
    `)`  shift, and go to state 55

    Type  go to state 56
    Types  go to state 57


State 46

   18 TypedTerminal: ID `:` Type •

    $default  reduce using rule 18 (TypedTerminal)


State 47

   19 TypedTerminal: ID `(` Type • `)`

    `)`  shift, and go to state 58


State 48

   15 INCLUDE: `%include` CODE SEPARATOR •

    $default  reduce using rule 15 (INCLUDE)


State 49

   22 LHS: ID `:` • Type

    ID  shift, and go to state 44
    `(`  shift, and go to state 45

    Type  go to state 59


State 50

   21 Rule: LHS `=` • S_4 RHS

    `|`  shift, and go to state 60

    $default  reduce using rule 55 (S_4)

    S_4  go to state 61


State 51

   47 S_1_L: S_1_L Rule •

    $default  reduce using rule 47 (S_1_L)


State 52

   50 S_2: SEPARATOR •

    $default  reduce using rule 50 (S_2)


State 53

    1 Notation: Prefix `%rules` INCLUDE S_1 S_2 •

    $default  reduce using rule 1 (Notation)


State 54

   41 Type: ID `[` • Types `]`

    ID  shift, and go to state 44
    `(`  shift, and go to state 45

    Type  go to state 56
    Types  go to state 62


State 55

   43 Type: `(` `)` •

    $default  reduce using rule 43 (Type)


State 56

   44 Types: Type •
   45      | Type • `,` Types

    `,`  shift, and go to state 63

    $default  reduce using rule 44 (Types)


State 57

   42 Type: `(` Types • `)`

    `)`  shift, and go to state 64


State 58

   19 TypedTerminal: ID `(` Type `)` •

    $default  reduce using rule 19 (TypedTerminal)


State 59

   22 LHS: ID `:` Type •

    $default  reduce using rule 22 (LHS)


State 60

   56 S_4: `|` •

    $default  reduce using rule 56 (S_4)


State 61

   21 Rule: LHS `=` S_4 • RHS

    ID  shift, and go to state 65
    `(`  shift, and go to state 66
    `%empty`  shift, and go to state 67

    RHS  go to state 68
    Production  go to state 69
    NamedFields  go to state 70
    NamedField  go to state 71
    FIELD  go to state 72
    S_5_L  go to state 73
    S_5  go to state 74


State 62

   41 Type: ID `[` Types • `]`

    `]`  shift, and go to state 75


State 63

   45 Types: Type `,` • Types

    ID  shift, and go to state 44
    `(`  shift, and go to state 45

    Type  go to state 56
    Types  go to state 76


State 64

   42 Type: `(` Types `)` •

    $default  reduce using rule 42 (Type)


State 65

   30 NamedField: ID • `:` FIELD
   31 FIELD: ID •

    `:`  shift, and go to state 77

    $default  reduce using rule 31 (FIELD)


State 66

   32 FIELD: `(` • NamedFields `)` REPEAT

    ID  shift, and go to state 65
    `(`  shift, and go to state 66
    `%empty`  shift, and go to state 67

    NamedFields  go to state 78
    NamedField  go to state 71
    FIELD  go to state 72


State 67

   26 NamedFields: `%empty` •

    $default  reduce using rule 26 (NamedFields)


State 68

   21 Rule: LHS `=` S_4 RHS •

    $default  reduce using rule 21 (Rule)


State 69

   57 S_5_L: Production •

    $default  reduce using rule 57 (S_5_L)


State 70

   25 Production: NamedFields • Action Precedence

    CODE  shift, and go to state 79

    $default  reduce using rule 36 (Action)

    Action  go to state 80


State 71

   27 NamedFields: NamedField •
   28      | NamedField • NamedFields

    ID  shift, and go to state 65
    `(`  shift, and go to state 66
    `%empty`  shift, and go to state 67

    ID     [reduce using rule 27 (NamedFields)]
    $default  reduce using rule 27 (NamedFields)

    NamedFields  go to state 81
    NamedField  go to state 71
    FIELD  go to state 72


State 72

   29 NamedField: FIELD •

    $default  reduce using rule 29 (NamedField)


State 73

   58 S_5_L: S_5_L • `|` Production
   59 S_5: S_5_L •

    `|`  shift, and go to state 82

    $default  reduce using rule 59 (S_5)


State 74

   24 RHS: S_5 •

    $default  reduce using rule 24 (RHS)


State 75

   41 Type: ID `[` Types `]` •

    $default  reduce using rule 41 (Type)


State 76

   45 Types: Type `,` Types •

    $default  reduce using rule 45 (Types)


State 77

   30 NamedField: ID `:` • FIELD

    ID  shift, and go to state 83
    `(`  shift, and go to state 66

    FIELD  go to state 84


State 78

   32 FIELD: `(` NamedFields • `)` REPEAT

    `)`  shift, and go to state 85


State 79

   37 Action: CODE •

    $default  reduce using rule 37 (Action)


State 80

   25 Production: NamedFields Action • Precedence

    `%prec`  shift, and go to state 86

    $default  reduce using rule 38 (Precedence)

    Precedence  go to state 87


State 81

   28 NamedFields: NamedField NamedFields •

    $default  reduce using rule 28 (NamedFields)


State 82

   58 S_5_L: S_5_L `|` • Production

    ID  shift, and go to state 65
    `(`  shift, and go to state 66
    `%empty`  shift, and go to state 67

    Production  go to state 88
    NamedFields  go to state 70
    NamedField  go to state 71
    FIELD  go to state 72


State 83

   31 FIELD: ID •

    $default  reduce using rule 31 (FIELD)


State 84

   30 NamedField: ID `:` FIELD •

    $default  reduce using rule 30 (NamedField)


State 85

   32 FIELD: `(` NamedFields `)` • REPEAT

    `?`  shift, and go to state 89
    `*`  shift, and go to state 90
    `+`  shift, and go to state 91

    REPEAT  go to state 92


State 86

   39 Precedence: `%prec` • ID

    ID  shift, and go to state 93


State 87

   25 Production: NamedFields Action Precedence •

    $default  reduce using rule 25 (Production)


State 88

   58 S_5_L: S_5_L `|` Production •

    $default  reduce using rule 58 (S_5_L)


State 89

   33 REPEAT: `?` •

    $default  reduce using rule 33 (REPEAT)


State 90

   34 REPEAT: `*` •

    $default  reduce using rule 34 (REPEAT)


State 91

   35 REPEAT: `+` •

    $default  reduce using rule 35 (REPEAT)


State 92

   32 FIELD: `(` NamedFields `)` REPEAT •

    $default  reduce using rule 32 (FIELD)


State 93

   39 Precedence: `%prec` ID •

    $default  reduce using rule 39 (Precedence)
